--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,60 @@
   font-style: italic;
 }
 
+.menus li {
+  cursor: pointer;
+}
+
 .menus li:hover {
   color: aqua;
-  cursor: pointer;
   text-decoration: underline;
+}
+
+/* banner related styles */
+.banner-container {
+  height: 100vh;
+  background-image: url("./assets/image/background.jpg"),
+    linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.45));
+  background-blend-mode: overlay;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.banner-title {
+  font-size: 90px;
+  font-weight: bold;
+  color: white;
+}
+
+.primary {
+  color: red;
+}
+
+.banner-para {
+  font-size: 22px;
+  color: white;
+  margin: 12px 0 20px;
+}
+
+.btn-dis {
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 16px 32px;
+  text-transform: uppercase;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.btn-hire {
+  border: none;
+  padding: 16px 32px;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-left: 12px;
+  cursor: pointer;
 }
