--- a/styles.css
+++ b/styles.css
@@ -57,20 +57,16 @@
 .banner-para {
   font-size: 22px;
   color: white;
-  margin: 12px 0 20px;
+  width: 55%;
+  margin: 12px auto 20px;
 }
 
-.btn-dis {
+.btn-primary {
   background-color: red;
   color: white;
-  border: none;
-  padding: 16px 32px;
-  text-transform: uppercase;
-  font-size: 16px;
-  cursor: pointer;
 }
 
-.btn-hire {
+.btn {
   border: none;
   padding: 16px 32px;
   text-transform: uppercase;
