--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,104 @@
   margin-left: 12px;
   cursor: pointer;
 }
+
+/* service related styles */
+.service-container {
+  height: 100vh;
+  background-image: url("./assets/image/footer-bg.png"),
+    linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9));
+  background-blend-mode: overlay;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color: #becfd0;
+}
+
+.service-btn {
+  color: gray;
+  border: none;
+  font-size: 16px;
+  padding: 15px 35px;
+  border-radius: 24px;
+  cursor: pointer;
+}
+
+.service-title {
+  font-size: 40px;
+  margin: 12px 0 16px;
+  padding-left: 4px;
+}
+
+.service-para {
+  font-size: 20px;
+  padding-left: 8px;
+}
+
+.service-list {
+  font-size: 18px;
+  margin: 24px 0 20px;
+  padding-left: 24px;
+}
+
+.author-container {
+  display: flex;
+  align-items: center;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  border-right: 1px solid red;
+}
+
+.author-container .profile div {
+  color: white;
+}
+
+.author-img {
+  width: 25%;
+  border-radius: 100px;
+  padding: 8px;
+}
+
+.author-btn {
+  color: red;
+  border: none;
+  padding: 15px 30px;
+  border-radius: 24px;
+  text-transform: uppercase;
+  margin-left: 12px;
+  cursor: pointer;
+}
+
+.right-side-container {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.top-service-card {
+  display: flex;
+  gap: 12px;
+}
+
+.bottom-service-card {
+  display: flex;
+  gap: 12px;
+}
+
+.service-card {
+  background-color: white;
+  color: black;
+  height: 200px;
+  width: 200px;
+  padding: 50px;
+  border-radius: 8px;
+  align-content: center;
+  text-align: center;
+}
+
+.service-card h3 {
+  margin-top: 20px;
+}
