--- a/styles.css
+++ b/styles.css
@@ -207,3 +207,51 @@
   border-radius: 24px;
   font-size: 14px;
 }
+
+/* blog related styles */
+.blog-container {
+  width: 80%;
+  margin: 100px auto;
+}
+
+.blog-title {
+  text-align: center;
+  font-size: 50px;
+}
+
+.blog-para {
+  text-align: center;
+  font-size: 22px;
+  margin-top: 12px;
+}
+
+.card-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.blog-card {
+  height: 420px;
+  width: 340px;
+  box-shadow: 4px 4px 8px gray;
+  border-radius: 12px;
+}
+
+.card-img {
+  width: 100%;
+  border-radius: 12px;
+  padding-bottom: 12px;
+}
+
+.card-title {
+  font-size: 24px;
+  font-weight: bold;
+  padding: 15px 15px 0;
+}
+
+.card-para {
+  font-size: 18px;
+  padding: 0 15px 15px;
+  margin-top: 15px;
+}
