--- a/styles.css
+++ b/styles.css
@@ -255,3 +255,66 @@
   padding: 0 15px 15px;
   margin-top: 15px;
 }
+
+/* footer related styles */
+footer {
+  width: 100%;
+  height: 60vh;
+  background-image: url("./assets/image/footer-bg.png"),
+    linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9));
+  background-blend-mode: overlay;
+  color: white;
+  line-height: 2rem;
+}
+
+.footer-container {
+  width: 75%;
+  height: 55vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0px auto;
+  border-bottom: 1px solid gray;
+}
+
+.logo-details {
+  line-height: 1.5rem;
+}
+
+.icons {
+  display: flex;
+  gap: 24px;
+  margin-top: 16px;
+}
+
+.fa-brands {
+  font-size: 20px;
+}
+
+.fa-brands:hover {
+  color: aqua;
+  cursor: pointer;
+}
+
+.footer-heading {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 24px;
+}
+
+.fa-solid {
+  margin-right: 10px;
+}
+
+.useful-link p:hover,
+.support p:hover,
+.contact p:hover {
+  color: aqua;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.copy {
+  text-align: center;
+  padding: 2px;
+}
